--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>polanco inventario</title>
   </head>
   <style>
-    input[type='number'] {
-      margin-bottom: 10px;
+    input[type=text],input[type=password],input[type=email]{
+      margin-bottom:10px;
     }
   </style>
   <body>
